// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing appointment components renders correctly 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#fff",
      "borderBottomLeftRadius": 10,
      "borderBottomRightRadius": 10,
      "borderColor": "#0768C5",
      "borderWidth": 2,
      "paddingHorizontal": 10,
    }
  }
>
  <Component>
    body
  </Component>
</Component>
`;

exports[`Testing appointment components renders correctly 2`] = `
<Component
  style={
    Object {
      "borderRadius": 5,
      "borderWidth": 0,
      "elevation": 1,
      "marginBottom": 5,
      "marginLeft": 15,
      "marginRight": 15,
      "marginTop": 15,
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 3,
    }
  }
>
  <Component>
    container
  </Component>
</Component>
`;

exports[`Testing appointment components renders correctly 3`] = `
<Component
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#fff",
      "borderRadius": 5,
      "flexDirection": "row",
      "paddingBottom": 10,
      "paddingTop": 10,
    }
  }
>
  <Component>
    detail
  </Component>
</Component>
`;

exports[`Testing appointment components renders correctly 4`] = `
<Component
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#005EB8",
      "borderTopLeftRadius": 5,
      "borderTopRightRadius": 5,
      "flex": 1,
      "justifyContent": "center",
      "padding": 15,
    }
  }
>
  <Component
    style={
      Object {
        "borderTopLeftRadius": 5,
        "borderTopRightRadius": 5,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 12,
      }
    }
  >
    <Component>
      header
    </Component>
  </Component>
</Component>
`;

exports[`Testing appointment components renders correctly 5`] = `
<Component
  style={
    Object {
      "justifyContent": "flex-end",
      "paddingBottom": 4,
    }
  }
>
  <Component>
    timer
  </Component>
</Component>
`;

exports[`Testing appointment components renders correctly 6`] = `
<Component
  style={
    Object {
      "flexDirection": "column",
      "justifyContent": "space-around",
    }
  }
>
  <Component>
    title
  </Component>
</Component>
`;
